# wemake-python-package

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  L.txt  README.md  cookiecutter.json  pyproject.toml  setup.cfg
.github/: bake.toml  dependabot.yml
.github/workflows/: test.yml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: conftest.py  test_integration.sh  test_project_generation.py
{{cookiecutter.project_name}}/: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  setup.cfg
{{cookiecutter.project_name}}/.github/: dependabot.yml
{{cookiecutter.project_name}}/.github/workflows/: misspell.yml  test.yml
{{cookiecutter.project_name}}/docs/: Makefile  conf.py  index.rst  make.bat  requirements.txt
{{cookiecutter.project_name}}/docs/_templates/: badges.html  github.html  moreinfo.html
{{cookiecutter.project_name}}/tests/test_example/: test_some_function.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name.lower().replace('-', '_')}}/: example.py
